--- a/ADS-Assignment1.ipynb
+++ b/ADS-Assignment1.ipynb
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "729ec6ef",
    "metadata": {},
    "outputs": [
@@ -1290,6 +1290,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>deposit</th>\n",
+       "      <th>rent</th>\n",
        "      <th>floor</th>\n",
        "      <th>area</th>\n",
        "      <th>age</th>\n",
@@ -1301,6 +1303,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.064516</td>\n",
        "      <td>0.072917</td>\n",
        "      <td>0.225806</td>\n",
@@ -1310,6 +1314,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0.060</td>\n",
+       "      <td>0.200000</td>\n",
        "      <td>0.096774</td>\n",
        "      <td>0.225000</td>\n",
        "      <td>0.290323</td>\n",
@@ -1319,6 +1325,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.120000</td>\n",
        "      <td>0.290323</td>\n",
        "      <td>0.233333</td>\n",
        "      <td>0.516129</td>\n",
@@ -1328,6 +1336,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0.040</td>\n",
+       "      <td>0.073333</td>\n",
        "      <td>0.096774</td>\n",
        "      <td>0.177083</td>\n",
        "      <td>0.225806</td>\n",
@@ -1337,6 +1347,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0.180</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.096774</td>\n",
        "      <td>0.208333</td>\n",
        "      <td>0.032258</td>\n",
@@ -1349,12 +1361,19 @@
        "</div>"
       ],
       "text/plain": [
-       "      floor      area       age  rooms  all_to_deposit  district\n",
-       "0  0.064516  0.072917  0.225806   0.25        0.063813  0.380952\n",
-       "1  0.096774  0.225000  0.290323   0.75        0.259852  0.000000\n",
-       "2  0.290323  0.233333  0.516129   0.50        0.239848  0.000000\n",
-       "3  0.096774  0.177083  0.225806   0.50        0.113023  0.190476\n",
-       "4  0.096774  0.208333  0.032258   0.50        0.179836  0.142857"
+       "   deposit      rent     floor      area       age  rooms  all_to_deposit  \\\n",
+       "0    0.064  0.000000  0.064516  0.072917  0.225806   0.25        0.063813   \n",
+       "1    0.060  0.200000  0.096774  0.225000  0.290323   0.75        0.259852   \n",
+       "2    0.120  0.120000  0.290323  0.233333  0.516129   0.50        0.239848   \n",
+       "3    0.040  0.073333  0.096774  0.177083  0.225806   0.50        0.113023   \n",
+       "4    0.180  0.000000  0.096774  0.208333  0.032258   0.50        0.179836   \n",
+       "\n",
+       "   district  \n",
+       "0  0.380952  \n",
+       "1  0.000000  \n",
+       "2  0.000000  \n",
+       "3  0.190476  \n",
+       "4  0.142857  "
       ]
      },
      "metadata": {},
@@ -1590,7 +1609,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\it\\AppData\\Local\\Temp\\ipykernel_18804\\2098704454.py:4: FutureWarning: \n",
+      "C:\\Users\\it\\AppData\\Local\\Temp\\ipykernel_24084\\2098704454.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1640,7 +1659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\it\\AppData\\Local\\Temp\\ipykernel_18804\\300781208.py:4: FutureWarning: \n",
+      "C:\\Users\\it\\AppData\\Local\\Temp\\ipykernel_24084\\300781208.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2431,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "9ab055c7",
    "metadata": {},
    "outputs": [
@@ -2624,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "41f26b60",
    "metadata": {},
    "outputs": [
@@ -2825,6 +2844,34 @@
     "\n",
     "In essence, while advanced models can learn some feature transformations implicitly, human-driven feature engineering often provides a more direct and efficient way to encode domain knowledge and prepare data in a way that allows simpler models to perform well, and complex models to perform even better."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "52ee7e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_filtered.to_csv(\"tehran-renting-filtered.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9cb013fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_normalized.to_csv(\"tehran-renting-normalized.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8dc2587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
